# CryptoApp

./: .gitignore  GITHUB_AUTH.md  GITHUB_SETUP.md  Lockstich_api_insnstruction.txt  QUICK_START.md  README.md  setup-github.ps1
.github/workflows/: build-mac.yml
Claudo/: Redme.docx
Claudo/lockstitch_files/: AppDelegate.swift  CMakeLists.txt  CryptoApp-Bridging-Header.h  CryptoApp-Demo.swift  CryptoApp.swift  Info.plist  Lockstitch.cpp  Lockstitch.h  LockstitchBridge.h  LockstitchBridge.mm  LockstitchWrapper.h  LockstitchWrapper.mm  Lockstitch_Mac_compat.h  MAC_BUILD_INSTRUCTIONS.md  RUN_DEMO.command  ViewController.swift  build-app.sh  main.swift  patch-mac-compat.sh
